--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -203,7 +203,9 @@
   </div>
 </header>
 <!-- Sidebar end -->
-{% endmacro %} {% macro render_menu(render) %}
+{% endmacro %} 
+
+{% macro render_menu(render) %}
 <!-- ======================================= -->
 <!-- MAIN MENU -->
 <!-- ======================================= -->
