--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -147,7 +147,62 @@
     </main>
     <!-- Single page end -->
 
-    {{ render_menu(render) }}
+    <!-- ======================================= -->
+<!-- MAIN MENU -->
+<!-- ======================================= -->
+<!-- Menu Container -->
+<nav class="menu-container overlay-bg">
+  <!-- Menu Close -->
+  <div class="menu-close pointer-large"></div>
+
+  <!-- Sub Menu Close -->
+  <div class="submenu-close-box">
+    <div class="submenu-close pointer-large">
+      <button type="button"><i class="fas fa-arrow-left"></i>BACK</button>
+    </div>
+  </div>
+  <!-- Sub Menu Close End -->
+
+  <!-- Main Menu -->
+  <ul class="main-menu overlay-bg">
+    <!-- Menu Box -->
+    <li class="nav-box mouseover-image-change ">
+      <a href="index.html" class="pointer-large nav-link">
+        <span class="nav-btn " data-text="home">.Home</span>
+      </a>
+
+    </li>
+    <!-- Menu Box End -->
+    <!-- Menu Box -->
+    <li class="nav-box mouseover-image-change">
+      <a href="about.html" class="pointer-large nav-link">
+        <span class="nav-btn" data-text="about">.About me</span>
+      </a>
+  
+    </li>
+    <!-- Menu Box End -->
+  
+
+    <li class="nav-box mouseover-image-change">
+      <a href="#" class="pointer-large nav-link">
+        <span class="nav-btn" data-text="resume">.My portfolio</span>
+      </a>
+    
+    </li>
+
+    <!-- Menu Box -->
+    <li class="nav-box mouseover-image-change active">
+      <a href="contact.html" class="pointer-large nav-link">
+        <span class="nav-btn active" data-text="contact">.Contact me</span>
+      </a>
+      
+    </li>
+    <!-- Menu Box End -->
+  </ul>
+  <!-- Main Menu End -->
+</nav>
+<!-- Menu Container End -->
+
 
     <button id="back_to_top" class="btnEntrance pointer-href">
       <i class="fas fa-arrow-up"></i>
