--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -67,66 +67,66 @@
 />
 
 <meta name="theme-color" content="#175AEA" />
-{% endmacro %} 
-
-{% macro render_js(render) %}
+{% endmacro %} {% macro render_js(render) %}
 <!-- All JS Called Here -->
 <script>
-  var TxtType = function(el, toRotate, period) {
-      this.toRotate = toRotate;
-      this.el = el;
-      this.loopNum = 0;
-      this.period = parseInt(period, 10) || 2000;
-      this.txt = '';
-      this.tick();
-      this.isDeleting = false;
+  var TxtType = function (el, toRotate, period) {
+    this.toRotate = toRotate;
+    this.el = el;
+    this.loopNum = 0;
+    this.period = parseInt(period, 10) || 2000;
+    this.txt = "";
+    this.tick();
+    this.isDeleting = false;
   };
 
-  TxtType.prototype.tick = function() {
-      var i = this.loopNum % this.toRotate.length;
-      var fullTxt = this.toRotate[i];
+  TxtType.prototype.tick = function () {
+    var i = this.loopNum % this.toRotate.length;
+    var fullTxt = this.toRotate[i];
 
-      if (this.isDeleting) {
+    if (this.isDeleting) {
       this.txt = fullTxt.substring(0, this.txt.length - 1);
-      } else {
+    } else {
       this.txt = fullTxt.substring(0, this.txt.length + 1);
-      }
+    }
 
-      this.el.innerHTML = '<span class="wrap">'+this.txt+'</span>';
+    this.el.innerHTML = '<span class="wrap">' + this.txt + "</span>";
 
-      var that = this;
-      var delta = 200 - Math.random() * 100;
+    var that = this;
+    var delta = 200 - Math.random() * 100;
 
-      if (this.isDeleting) { delta /= 2; }
+    if (this.isDeleting) {
+      delta /= 2;
+    }
 
-      if (!this.isDeleting && this.txt === fullTxt) {
+    if (!this.isDeleting && this.txt === fullTxt) {
       delta = this.period;
       this.isDeleting = true;
-      } else if (this.isDeleting && this.txt === '') {
+    } else if (this.isDeleting && this.txt === "") {
       this.isDeleting = false;
       this.loopNum++;
       delta = 500;
-      }
+    }
 
-      setTimeout(function() {
+    setTimeout(function () {
       that.tick();
-      }, delta);
+    }, delta);
   };
 
-  window.onload = function() {
-      var elements = document.getElementsByClassName('typewrite');
-      for (var i=0; i<elements.length; i++) {
-          var toRotate = elements[i].getAttribute('data-type');
-          var period = elements[i].getAttribute('data-period');
-          if (toRotate) {
-            new TxtType(elements[i], JSON.parse(toRotate), period);
-          }
+  window.onload = function () {
+    var elements = document.getElementsByClassName("typewrite");
+    for (var i = 0; i < elements.length; i++) {
+      var toRotate = elements[i].getAttribute("data-type");
+      var period = elements[i].getAttribute("data-period");
+      if (toRotate) {
+        new TxtType(elements[i], JSON.parse(toRotate), period);
       }
-      // INJECT CSS
-      var css = document.createElement("style");
-      css.type = "text/css";
-      css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
-      document.body.appendChild(css);
+    }
+    // INJECT CSS
+    var css = document.createElement("style");
+    css.type = "text/css";
+    css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
+    document.body.appendChild(css);
   };
 </script>
 
@@ -145,9 +145,7 @@
 <script src="../static/js/plugins.js"></script>
 <script src="../static/js/contact-form.js"></script>
 <script src="../static/js/main.js"></script>
-{% endmacro %} 
-
-{% macro render_first(render) %}
+{% endmacro %} {% macro render_first(render) %}
 <!--[if IE]>
   <p class="browserupgrade">
     You are using an <strong>outdated</strong> browser. Please
@@ -185,27 +183,34 @@
     <!-- My Social Links -->
     <div class="author-social-icons text-center">
       <ul>
-        <li><a href="https://github.com/olugbenga1234" target="_blank" class="pointer-href"><i class="fab fa-github"></i></a></li>
         <li>
-          <a href="#" class="pointer-href"><i class="fab fa-facebook-f"></i></a>
+          <a
+            href="https://github.com/olugbenga1234"
+            target="_blank"
+            class="pointer-href"
+            ><i class="fab fa-github"></i
+          ></a>
         </li>
-        
-        <!--li><a href="#" class="pointer-href"><i class="fas fa-basketball-ball"></i></a></li-->
+
+        <li><a href="mailto:{{my_email}}" class="pointer-href"><i class="fas fa-envelope"></i></a></li>
         <!--li><a href="#" class="pointer-href"><i class="fab fa-behance"></i></a></li-->
+
         <li>
-          <a href="https://www.linkedin.com/in/olugbenga-akeredolu-b53771160" target="_blank" class="pointer-href"
+          <a
+            href="https://www.linkedin.com/in/olugbenga-akeredolu-b53771160"
+            target="_blank"
+            class="pointer-href"
             ><i class="fab fa-linkedin-in"></i
           ></a>
         </li>
+
       </ul>
     </div>
     <!-- My Social Links End -->
   </div>
 </header>
 <!-- Sidebar end -->
-{% endmacro %} 
-
-{% macro render_menu(render) %}
+{% endmacro %} {% macro render_menu(render) %}
 <!-- ======================================= -->
 <!-- MAIN MENU -->
 <!-- ======================================= -->
@@ -229,7 +234,6 @@
       <a href="index.html" class="pointer-large nav-link">
         <span class="nav-btn active" data-text="home">.Home</span>
       </a>
-
     </li>
     <!-- Menu Box End -->
     <!-- Menu Box -->
@@ -237,16 +241,13 @@
       <a href="about.html" class="pointer-large nav-link">
         <span class="nav-btn" data-text="about">.About me</span>
       </a>
-  
     </li>
     <!-- Menu Box End -->
-  
 
     <li class="nav-box mouseover-image-change">
       <a href="#" class="pointer-large nav-link">
         <span class="nav-btn" data-text="resume">.My portfolio</span>
       </a>
-    
     </li>
 
     <!-- Menu Box -->
@@ -254,7 +255,6 @@
       <a href="contact.html" class="pointer-large nav-link">
         <span class="nav-btn" data-text="contact">.Contact me</span>
       </a>
-      
     </li>
     <!-- Menu Box End -->
   </ul>
@@ -263,5 +263,3 @@
 <!-- Menu Container End -->
 
 {% endmacro %}
-
-
