--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -350,7 +350,7 @@
                 <h3 class="mb-40"><span>.</span> reviews</h3>
                 <!-- Form Message -->
                 <div class="row text-center mb-4">
-                    <div class="col-md-6">
+                    <div class="col-md-6 container">
                         {% with messages = get_flashed_messages(with_categories=true)
                   %} {% if messages %} {% for category, message in messages %}
                         {% if category == 'success' %}
