--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -177,7 +177,7 @@
     <!-- Main Menu Button End -->
     <!-- My Image -->
     <div class="author-image theme-bg-color">
-      <img src="img/author/1.png" alt="author-image" />
+      <img src="../static/img/pics/my_pic-black.png" alt="author-image" />
     </div>
     <!-- My Image End -->
     <!-- My Social Links -->
