--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -192,7 +192,7 @@
           ></a>
         </li>
 
-        <li><a href="mailto:{{my_email}}" class="pointer-href"><i class="fas fa-envelope"></i></a></li>
+        <li><a href="mailto:olugbengaakeredolu1234@gmail.com" class="pointer-href"><i class="fas fa-envelope"></i></a></li>
         <!--li><a href="#" class="pointer-href"><i class="fab fa-behance"></i></a></li-->
 
         <li>
