--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -36,7 +36,7 @@
               <span><i class="fab fa-whatsapp"></i></i></span>
             </div>
             <div class="text-box">
-              <a href="#" class="pointer-small">{{my_number}}</a>
+              <a href="#" class="pointer-small">{{watsapp}}</a>
             </div>
           </div>
           <div class="contact-info-box">
@@ -52,7 +52,7 @@
               <span><i class="fas fa-home"></i></span>
             </div>
             <div class="text-box">
-              <p>4237 Benson Park Drive <br />Young America</p>
+              <p>Greater London<br />United Kingdom</p>
             </div>
           </div>
         </div>
