--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -245,7 +245,7 @@
     <!-- Menu Box End -->
 
     <li class="nav-box mouseover-image-change">
-      <a href="#" class="pointer-large nav-link">
+      <a href="portfolio.html" class="pointer-large nav-link">
         <span class="nav-btn" data-text="resume">.My portfolio</span>
       </a>
     </li>
