--- a/src/templates/portfolio.html
+++ b/src/templates/portfolio.html
@@ -14,10 +14,7 @@
       <div class="page-header">
         <h2>.<span>portfolio</span></h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut magna
-          neque, pulvinar in orci in, pellentesque consequat tellus. Fusce
-          mauris massa, pellentesque nec augue at, hendrerit rutrum ex. Cras
-          venenatis vulputate nisi ut elementum.
+        My works
         </p>
       </div>
       <!-- Page Header End -->
@@ -78,144 +75,8 @@
         </div>
         <!-- Portfolio Grid -->
         <div class="row grid no-gutters">
-          <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6 grid-item cat1 cat3">
-            <div class="portfolio-image-block">
-              <img src="img/portfolio/1.png" alt="portfolio image" />
-              <div class="portfolio-image-info">
-                <a href="img/portfolio/1.png" class="gallery_popup pointer-open"
-                  ><i class="fas fa-search"></i
-                ></a>
-                <h4 class="body-font">Branding</h4>
-              </div>
-              <div class="image-hover-btn">
-                <div class="full-view-btn">
-                  <a href="portfolio-details.html" class="pointer-href"
-                    >Full view</a
-                  >
-                </div>
-                <div class="load-more-btn">
-                  <a href="portfolio-archives.html" class="pointer-href"
-                    >Load more</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6 grid-item cat2 cat4">
-            <div class="portfolio-image-block">
-              <img src="img/portfolio/2.png" alt="portfolio image" />
-              <div class="portfolio-image-info">
-                <a href="img/portfolio/2.png" class="gallery_popup pointer-open"
-                  ><i class="fas fa-search"></i
-                ></a>
-                <h4 class="body-font">Branding</h4>
-              </div>
-              <div class="image-hover-btn">
-                <div class="full-view-btn">
-                  <a href="portfolio-details.html" class="pointer-href"
-                    >Full view</a
-                  >
-                </div>
-                <div class="load-more-btn">
-                  <a href="portfolio-archives.html" class="pointer-href"
-                    >Load more</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6 grid-item cat1 cat3">
-            <div class="portfolio-image-block">
-              <img src="img/portfolio/3.png" alt="portfolio image" />
-              <div class="portfolio-image-info">
-                <a href="img/portfolio/3.png" class="gallery_popup pointer-open"
-                  ><i class="fas fa-search"></i
-                ></a>
-                <h4 class="body-font">Branding</h4>
-              </div>
-              <div class="image-hover-btn">
-                <div class="full-view-btn">
-                  <a href="portfolio-details.html" class="pointer-href"
-                    >Full view</a
-                  >
-                </div>
-                <div class="load-more-btn">
-                  <a href="portfolio-archives.html" class="pointer-href"
-                    >Load more</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6 grid-item cat2 cat4">
-            <div class="portfolio-image-block">
-              <img src="img/portfolio/4.png" alt="portfolio image" />
-              <div class="portfolio-image-info">
-                <a href="img/portfolio/4.png" class="gallery_popup pointer-open"
-                  ><i class="fas fa-search"></i
-                ></a>
-                <h4 class="body-font">Branding</h4>
-              </div>
-              <div class="image-hover-btn">
-                <div class="full-view-btn">
-                  <a href="portfolio-details.html" class="pointer-href"
-                    >Full view</a
-                  >
-                </div>
-                <div class="load-more-btn">
-                  <a href="portfolio-archives.html" class="pointer-href"
-                    >Load more</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6 grid-item cat1 cat4">
-            <div class="portfolio-image-block">
-              <img src="img/portfolio/5.png" alt="portfolio image" />
-              <div class="portfolio-image-info">
-                <a href="img/portfolio/5.png" class="gallery_popup pointer-open"
-                  ><i class="fas fa-search"></i
-                ></a>
-                <h4 class="body-font">Branding</h4>
-              </div>
-              <div class="image-hover-btn">
-                <div class="full-view-btn">
-                  <a href="portfolio-details.html" class="pointer-href"
-                    >Full view</a
-                  >
-                </div>
-                <div class="load-more-btn">
-                  <a href="portfolio-archives.html" class="pointer-href"
-                    >Load more</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6 grid-item cat2 cat3">
-            <div class="portfolio-image-block">
-              <img src="img/portfolio/6.png" alt="portfolio image" />
-              <div class="portfolio-image-info">
-                <a href="img/portfolio/6.png" class="gallery_popup pointer-open"
-                  ><i class="fas fa-search"></i
-                ></a>
-                <h4 class="body-font">Branding</h4>
-              </div>
-              <div class="image-hover-btn">
-                <div class="full-view-btn">
-                  <a href="portfolio-details.html" class="pointer-href"
-                    >Full view</a
-                  >
-                </div>
-                <div class="load-more-btn">
-                  <a href="portfolio-archives.html" class="pointer-href"
-                    >Load more</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
+        
+        
           <div
             class="col-xl-4 col-lg-6 col-md-6 col-sm-6 grid-item cat1 cat2 cat3"
           >
