--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -125,12 +125,38 @@
 
                                         </div>
                                     </div>
+
+                                    <div class="timeline-item clearfix">
+                                        <div class="timeline-left">
+                                            <h6 class="item-period body-font">2020</h6>
+                                            <span class="item-company"></span>
+                                        </div>
+                                        <div class="divider"></div>
+                                        <div class="timeline-right">
+                                            <h6 class="item-company body-font">AWS Certified Cloud Practitioner
+                                            </h6>
+
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <!-- Timeline - Experience -->
                             <div class="experience subtitle">
                                 <h3 class="mb-40">.<span>experience</span></h3>
                                 <div class="timeline clearfix">
+                                    <div class="timeline-item clearfix">
+                                        <div class="timeline-left">
+                                            <h6 class="item-period body-font">2016</h6>
+                                            <span class="item-company">-</span>
+                                        </div>
+                                        <div class="divider"></div>
+                                        <div class="timeline-right">
+                                            <h6 class="item-title body-font">As Freelancer</h6>
+
+                                        </div>
+                                    </div>
+
+
                                     <div class="timeline-item clearfix">
                                         <div class="timeline-left">
                                             <h6 class="item-period body-font">2016-Active</h6>
